<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05F7DB"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<!-- Top Buttons -->

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal" >

		
		<ImageButton
			android:id="@+id/new_btn"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginLeft="25dp"
			android:contentDescription="@string/start_new"
			android:background="@drawable/new_pic" />

		<ImageButton
			android:id="@+id/draw_btn"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginLeft="25dp"
			android:contentDescription="@string/brush"
			android:background="@drawable/brush" />

		<ImageButton
			android:id="@+id/erase_btn"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginLeft="25dp"
			android:contentDescription="@string/erase"
			android:background="@drawable/slate_eraser" />

		<ImageButton
			android:id="@+id/save_btn"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_marginLeft="25dp"
			android:contentDescription="@string/save"
			android:background="@drawable/save" />
	</LinearLayout>

	<!-- Custom View -->

	<pati.slate.DrawingView
	    android:id="@+id/drawing"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="0dp"
	    android:layout_marginRight="0dp"
	    android:layout_marginTop="1dp"
	    android:layout_weight="0.89"
	    android:background="#FFFFFFFF" />

	<!-- Color Palette -->

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="40dp"
		android:layout_gravity="center"
		android:orientation="vertical" >

		<!-- Bottom Row -->

		<LinearLayout
		    android:id="@+id/paint_colors"
		    android:layout_width="350dp"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_marginBottom="5dp"
		        android:background="#FF0000FF"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#FF0000FF" />

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="58.47"
		        android:layout_marginBottom="5dp"
		        android:background="#E009F0"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#E009F0" />

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="67.93"
		        android:background="#FFFFCC00"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#FFFFCC00" />

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="74.63"
		        android:background="#090909"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#090909" />

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="96.43"
		        android:background="#F00909"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#F00909" />

		    <ImageButton
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="3.47"
		        android:background="#0DF009"
		        android:contentDescription="@string/paint"
		        android:onClick="paintClicked"
		        android:src="@drawable/paint"
		        android:tag="#0DF009" />

		    <ImageButton
		        style="@drawable/medium"
		        android:layout_width="45dp"
		        android:layout_height="35dp"
		        android:layout_margin="2dp"
		        android:layout_weight="2.31"
		        android:adjustViewBounds="true"
		        android:background="#05F7DB"
		        android:contentDescription="@string/paint"
		        android:maxHeight="@dimen/activity_vertical_margin"
		        android:maxWidth="@dimen/activity_horizontal_margin"
		        android:onClick="paintClicked"
		        android:scaleType="fitXY"
		        android:src="@drawable/paint"
		        android:tag="#05F7DB" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>